fix: overflow styles

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #000d1a;
+    overflow: hidden;
 }
 
 .hidden_control {
